--- a/.github/workflows/docs-preview-create.yml
+++ b/.github/workflows/docs-preview-create.yml
@@ -5,7 +5,20 @@ on:
     inputs:
       repo:
         description: 'Repository name (not fully-qualified, eg. `svelte` or `kit`)'
-        required: true
+        required: false
+        type: string
+      upstream:
+        description: 'Upstream repository (eg. `svelte` or `kit`)'
+        required: false
+        type: choice
+        options:
+          - svelte
+          - kit
+          - cli
+          - mcp
+      downstream:
+        description: 'Downstream repository (eg. `svelte` or `kit`)'
+        required: false
         type: string
       pr:
         description: 'PR number'
@@ -57,7 +70,7 @@ jobs:
           git checkout -B ${{ env.BRANCH }} # Force create/reset branch based on current main
 
       - name: Sync
-        run: cd apps/svelte.dev && pnpm sync-docs --owner="${{ inputs.owner }}" -p "${{ inputs.repo }}#${{ inputs.branch }}"
+        run: cd apps/svelte.dev && pnpm sync-docs --owner="${{ inputs.owner }}" -p "${{ inputs.repo && format('{0}#{0}#{1}', inputs.repo, inputs.branch) || format('{0}#{1}#{2}', inputs.upstream, inputs.downstream, inputs.branch) }}"
 
       - name: Configure Git
         run: |
