--- a/.github/workflows/sync-docs.yml
+++ b/.github/workflows/sync-docs.yml
@@ -6,7 +6,12 @@ on:
       repo:
         description: 'Repository name (not fully-qualified, eg. `svelte` or `kit`)'
         required: true
-        type: string
+        type: choice
+        options:
+          - svelte
+          - kit
+          - cli
+          - mcp
 
 permissions:
   contents: write
@@ -25,7 +30,7 @@ jobs:
       - run: pnpm install --frozen-lockfile
 
       - name: Sync
-        run: cd apps/svelte.dev && pnpm sync-docs -p ${{ inputs.repo }}
+        run: cd apps/svelte.dev && pnpm sync-docs -p "${{ inputs.repo }}#${{ inputs.repo }}#main
 
       - name: Create or update pull request
         uses: peter-evans/create-pull-request@v7
