--- a/.github/workflows/docs-preview-create.yml
+++ b/.github/workflows/docs-preview-create.yml
@@ -3,13 +3,9 @@ name: Docs preview create
 on:
   workflow_dispatch:
     inputs:
-      repo:
-        description: 'Repository name (not fully-qualified, eg. `svelte` or `kit`)'
-        required: false
-        type: string
       upstream:
         description: 'Upstream repository (eg. `svelte` or `kit`)'
-        required: false
+        required: true
         type: choice
         options:
           - svelte
@@ -18,7 +14,7 @@ on:
           - mcp
       downstream:
         description: 'Downstream repository (eg. `svelte` or `kit`)'
-        required: false
+        required: true
         type: string
       pr:
         description: 'PR number'
@@ -41,7 +37,7 @@ permissions:
   contents: write
 
 env:
-  BRANCH: preview-${{ inputs.repo }}-${{ inputs.pr }}
+  BRANCH: preview-${{ inputs.upstream }}-${{ inputs.pr }}
 
 jobs:
   Sync:
@@ -49,7 +45,7 @@ jobs:
     runs-on: ubuntu-latest
 
     concurrency:
-      group: preview-${{ inputs.repo }}-${{ inputs.pr }} # can't reference env here
+      group: preview-${{ inputs.upstream }}-${{ inputs.pr }} # can't reference env here
       cancel-in-progress: true
 
     steps:
@@ -70,7 +66,7 @@ jobs:
           git checkout -B ${{ env.BRANCH }} # Force create/reset branch based on current main
 
       - name: Sync
-        run: cd apps/svelte.dev && pnpm sync-docs --owner="${{ inputs.owner }}" -p "${{ inputs.repo && format('{0}#{0}#{1}', inputs.repo, inputs.branch) || format('{0}#{1}#{2}', inputs.upstream, inputs.downstream, inputs.branch) }}"
+        run: cd apps/svelte.dev && pnpm sync-docs --owner="${{ inputs.owner }}" -p "${{ format('{0}#{1}#{2}', inputs.upstream, inputs.downstream, inputs.branch) }}"
 
       - name: Configure Git
         run: |
@@ -80,7 +76,7 @@ jobs:
       - name: Push
         id: push
         continue-on-error: true
-        run: git add -A && git commit -m "sync docs for repo ${{ inputs.repo }}, pr ${{ inputs.pr }}, commit ${{ inputs.sha }}" && git push -u origin ${{ env.BRANCH }} --force
+        run: git add -A && git commit -m "sync docs for repo ${{ inputs.upstream }}, pr ${{ inputs.pr }}, commit ${{ inputs.sha }}" && git push -u origin ${{ env.BRANCH }} --force
 
       - name: Request preview comment
         if: ${{ steps.push.outcome == 'success' }}
@@ -89,7 +85,7 @@ jobs:
           event-type: 'request-preview-comment'
           client-payload: |-
             {
-              "repo": "${{ inputs.repo }}",
+              "repo": "${{ inputs.upstream }}",
               "pr": "${{ inputs.pr }}"
             }
 
@@ -100,7 +96,7 @@ jobs:
           event-type: 'docs-unaffected'
           client-payload: |-
             {
-              "repo": "${{ inputs.repo }}",
+              "repo": "${{ inputs.upstream }}",
               "pr": "${{ inputs.pr }}",
               "sha": "${{ inputs.sha }}"
             }
