--- a/.github/workflows/sync-docs.yml
+++ b/.github/workflows/sync-docs.yml
@@ -30,7 +30,7 @@ jobs:
       - run: pnpm install --frozen-lockfile
 
       - name: Sync
-        run: cd apps/svelte.dev && pnpm sync-docs -p "${{ inputs.repo }}#${{ inputs.repo }}#main
+        run: cd apps/svelte.dev && pnpm sync-docs -p "${{ inputs.repo }}#${{ inputs.repo }}#main"
 
       - name: Create or update pull request
         uses: peter-evans/create-pull-request@v7
