fix: `ai-tools` sync scripts

--- a/.github/workflows/docs-preview-create.yml
+++ b/.github/workflows/docs-preview-create.yml
@@ -11,7 +11,7 @@ on:
           - svelte
           - kit
           - cli
-          - ai
+          - ai-tools
       downstream:
         description: 'Downstream repository (eg. `svelte` or `kit`)'
         required: true
